# wolf

./: .env.example  .env.master.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
prompts/: 2026-04-24-gnosia-persona-fidelity-prompt.md  2026-04-24-llm-advanced-werewolf-terms-prompt.md  2026-04-24-llm-co-strategy-update-prompt.md  2026-04-24-llm-expert-strategy-audit-prompt.md  2026-04-24-llm-fake-seer-random-white-guard-prompt.md  2026-04-24-llm-medium-seer-white-inference-prompt.md  2026-04-24-llm-player-upgrade-prompt.md  2026-04-24-llm-role-progression-update-prompt.md  2026-04-24-llm-single-co-survivor-update-prompt.md  2026-04-24-update-prompt.md  2026-04-25-llm-co-parser-deemphasis-prompt.md  2026-04-25-llm-expert-seer-targeting-and-fake-result-prompt.md  2026-04-25-llm-expert-villager-co-day3-vote-fix-prompt.md  2026-04-25-llm-knight-sute-guard-prompt.md  2026-04-25-llm-user-context-board-analysis-prompt.md  2026-04-25-llm-werewolf-vote-discipline-prompt.md  2026-04-25-llm-wolf-guard-aware-attack-prompt.md  2026-04-25-llm-wolf-pair-inference-prompt.md  2026-04-25-turn-discussion-vote-flow-update-prompt.md  2026-04-26-gemini-vertex-ai-adc-migration-prompt.md  2026-04-26-llm-provider-switching-deepseek-v4-flash-prompt.md  2026-04-26-llm-provider-switching-gemini-3-flash-prompt.md  2026-04-26-llm-vote-bias-mitigation-prompt.md  2026-04-27-abort-role-reveal-prompt.md  2026-04-27-llm-common-3seer-two-nonwolf-confirmed-black-prompt.md  2026-04-27-llm-fake-medium-formation-diversity-prompt.md  2026-04-27-llm-rope-wolf-count-common-rule-prompt.md  2026-04-27-llm-village-role-co-confirmed-white-inference-prompt.md  2026-04-27-llm-villager-3seer-confirmed-white-inference-prompt.md  (+7 more)
(+333 files in other folders)
