[project]
name = "wolfbot"
version = "0.1.0"
description = "Discord 9-player werewolf bot with xAI Grok LLM padding"
requires-python = ">=3.11,<3.12"
dependencies = [
    "discord-py>=2.7,<3",
    "aiosqlite>=0.20",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "openai>=1.50",
    "httpx>=0.27",
    "tenacity>=8.2",
    "websockets>=12",
    "discord-ext-voice-recv>=0.5.2a179",
]

[project.scripts]
wolfbot = "wolfbot.main:cli"
wolfbot-npc = "wolfbot.npc_bot_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wolfbot"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-aiofiles",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning:audioop"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W", # pycodestyle / pyflakes
    "I", # isort
    "B", # bugbear
    "UP", # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
    "TID", # tidy imports

]
ignore = [
    "E501", # line length handled by formatter

]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["wolfbot"]
mypy_path = "src"
exclude = ["tests/.*"]

[[tool.mypy.overrides]]
module = ["discord.*", "aiosqlite.*", "tenacity.*", "websockets.*"]
ignore_missing_imports = true
